# kraken_tools

./: README.md  TODO.md  TestScript(LambdaQuad).txt  __init__.py  activate_env.sh  cli.py  conda_setup.py  conda_setup.sh  install-guide.md  logger.py  package-structure.txt  pipeline.py  pyproject.toml
analysis/: differential.py.txt  metadata.py  statistical.py
kraken_tools/: cli.py  main.py  workflow-diagram.mermaid
kraken_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kraken_tools/analysis/: abundance.py.txt  alpha_diversity_and_pca.py  data_processing.py  differential.py  feature_selection.py  glmm_analysis.py  glmm_analysis.py.py  normalization_and_filtering.py  permanova.py  rf_shap.py  taxonomy.py  tsne.py
kraken_tools/docs/: feature-selection-README.md  permanova-README.md  rf-shap-README.md  troubleshooting-README.md  tsne_README.md  workflow-diagram.mermaid
kraken_tools/kraken_tools.egg-info/: PKG-INFO  entry_points.txt
kraken_tools/preprocessing/: kneaddata.py  kraken-obsolete.py  kraken-run.py  kraken_run.py  parallel.py
kraken_tools/utils/: cmd.utils.py  cmd_utils.py  db_validation.py  file_utils.py  metadata_utils.py  resource_utils.py  sample_utils.py
preprocessing/: bracken_run.py  kneaddata.py
