[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken_tools"
version = "0.1.0"
description = "A comprehensive Python package for analyzing taxonomic profiles from Kraken2/Bracken"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-bio>=0.5.7",
    "scikit-learn>=1.0.0", 
    "scikit-posthocs>=0.7.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "matplotlib-venn>=0.11.7",
    "psutil>=5.9.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "flake8>=4.0.1",
    "black>=22.3.0",
    "sphinx>=4.4.0",
]
kraken = [
    "kneaddata"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/kraken_tools"
"Bug Tracker" = "https://github.com/yourusername/kraken_tools/issues"

[project.scripts]
kraken-tools = "kraken_tools.cli:main"

[tool.setuptools]
packages = ["kraken_tools"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
