[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-tools"
version = "0.1.0"
description = "A comprehensive Python package for analyzing taxonomic profiles from Kraken2 and Bracken, with tools for data processing, statistical analysis, and visualization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "David Haslam", email = "dhaslam@gmail.com"}
]
maintainers = [
    {name = "David Haslam", email = "dhaslam@gmail.com"}
]
keywords = ["microbiome", "metagenomics", "kraken2", "bracken", "kneaddata", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-bio>=0.5.7",
    "scikit-learn>=1.0.0", 
    "scikit-posthocs>=0.7.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "matplotlib-venn>=0.11.7",
    "psutil>=5.9.0",
    "tqdm>=4.62.0",
    "shap>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "flake8>=4.0.1",
    "black>=22.3.0",
    "sphinx>=4.4.0",
]
kraken = [
    "kneaddata"
]

[project.urls]
"Homepage" = "https://github.com/haslamdb/kraken_tools"
"Bug Tracker" = "https://github.com/haslamdb/kraken_tools/issues"
"Documentation" = "https://github.com/haslamdb/kraken_tools/blob/main/README.md"

[project.scripts]
kraken-tools = "kraken_tools.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["kraken_tools"]

[tool.setuptools.package-data]
"kraken_tools" = ["*.md"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
